[package]
name = "cf-linux"
version = "0.1.0"
edition = "2018"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev"]
description = "cf-linux is a project to bring CurseForge modpacks to Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheDutchMC/cf-linux"
homepage = "https://github.com/TheDutchMC/cf-linux"
readme = "REAMDE.md"
keywords = ["curseforge", "minecraft", "linux"]
categories = ["api-bindings", "games"]

[dependencies]
serde_json = "1.0.68"
termcolor = "1.1.2"
anyhow = "1.0.44"
clap = "2.33.3"
lazy_static = "1.4.0"
indicatif = "0.16.2"
zip = "0.5.13"
tempfile = "3.2.0"

[dependencies.reqwest]
version = "0.11.5"
default-features = false
features = ["rustls-tls", "blocking", "json"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[profile.release]
lto = true
panic = "abort"